resolve warnings on depricated Assert.assertThat